--- a/Presentazione/presentazione.tex
+++ b/Presentazione/presentazione.tex
@@ -427,8 +427,8 @@ Quando $\Cal R(Y, f(Y)) = -1$, si utilizza $\widehat{\bm Q}$ per capire quali pu
 
 \begin{frame}
 \null\vskip.2cm
-\foreach \i in {1,2,...,27}{
-\only<\i>{\line{\hfil\includegraphics[width=.65\hsize]{anim\i.pdf}\hfil}}
+\foreach \i in {1,2,...,31}{
+\only<\i>{\line{\hfil\includegraphics[width=.65\hsize]{anim_\i.pdf}\hfil}}
 }
 \end{frame}
 
