--- a/Presentazione/biblist.bib
+++ b/Presentazione/biblist.bib
@@ -30,7 +30,7 @@ editor="Müller, Manfred W.
 and Buhmann, Martin D.
 and Mache, Detlef H.
 and Felten, Michael",
-title="Native Hilbert Spaces for Radial Basis Functions I",
+title="Native Hilbert Spaces for Radial Basis Functions \uppercase{I}",
 booktitle="New Developments in Approximation Theory",
 year="1999",
 publisher="BirkhÃ¤user Basel",
