--- a/Presentazione/presentazione.tex
+++ b/Presentazione/presentazione.tex
@@ -363,36 +363,42 @@ La scelta di $\tau$  {\em non} dipende dai dati che si devono classificare.
 
 
 \begin{frame}
-\line{\kern-.3cm
-\includegraphics[width=.5\hsize]{reg_sin.pdf}
+\null\vskip.3cm
+\line{\kern-.8cm
+\includegraphics[width=.55\hsize]{reg_sin.pdf}
 \hss
-\raise1.2cm\vbox{%
+\raise 1.5cm\vbox{%
 \hbox{\small$\Cal C^0$}
-\kern1.2cm
+\kern 1.3cm
 \hbox{\small$\Cal C^2$}
-\kern1.2cm
+\kern 1.3cm
 \hbox{\small$\Cal C^4$}
 \vfil
 }
 \hss
-\includegraphics[width=.5\hsize]{reg_disc1.pdf}}
+\includegraphics[width=.55\hsize]{reg_disc1.pdf}%
+\kern-.7cm}
+\vss
 \end{frame}
 
 
 \begin{frame}
-\line{\kern-.3cm
-\includegraphics[width=.5\hsize]{reg_abs.pdf}
+\null\vskip.3cm
+\line{\kern-.8cm
+\includegraphics[width=.55\hsize]{reg_abs.pdf}
 \hss
-\raise1.2cm\vbox{%
+\raise 1.5cm\vbox{%
 \hbox{\small$\Cal C^0$}
-\kern1.2cm
+\kern 1.3cm
 \hbox{\small$\Cal C^2$}
-\kern1.2cm
+\kern 1.3cm
 \hbox{\small$\Cal C^4$}
 \vfil
 }
 \hss
-\includegraphics[width=.5\hsize]{reg_c1notc2.pdf}}
+\includegraphics[width=.55\hsize]{reg_c1notc2.pdf}%
+\kern-.7cm}
+\vss
 \end{frame}
 
 
@@ -428,7 +434,7 @@ Quando $\Cal R(Y, f(Y)) = -1$, si utilizza $\widehat{\bm Q}$ per capire quali pu
 \begin{frame}
 \null\vskip.2cm
 \foreach \i in {1,2,...,31}{
-\only<\i>{\line{\hfil\includegraphics[width=.65\hsize]{anim_\i.pdf}\hfil}}
+\only<\i>{\line{\hfil\includegraphics[width=.75\hsize]{anim_\i.pdf}\hfil}\vss}
 }
 \end{frame}
 
@@ -483,9 +489,9 @@ Quando $\Cal R(Y, f(Y)) = -1$, si utilizza $\widehat{\bm Q}$ per capire quali pu
 %%%%%%%%%%%%%%%%%
 \line{%
 \kern-1cm
-\includegraphics[width=.57\hsize]{f9_ori.pdf}
+\includegraphics[width=.57\hsize]{f6_ori.pdf}
 \hss
-\includegraphics[width=.53\hsize]{f9.pdf}}
+\includegraphics[width=.53\hsize]{f6.pdf}}
 \vskip.5cm
 \line{\small\hfil$h_4(x,y) = \left|\frac12-xy\right|$\hfil}
 
@@ -600,8 +606,10 @@ con il quale $\dim V =\infty$.
 
 \begin{frame}[allowframebreaks]
 \frametitle{Riferimenti bibliografici}
+\footnotesize
 \nocite{*}
-\bibliographystyle{amsalpha}
+%\bibliographystyle{amsalpha}
+\bibliographystyle{unsrt}
 \bibliography{biblist.bib} 
 \end{frame}
 
